// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AmountField Component AmountField renders 1`] = `
<div>
  <div
    class="fieldGroup"
  >
    <input
      autocomplete="off"
      class="default"
      inputmode="numeric"
      name="name"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`AmountField Component AmountField renders with values in disabled highligted 1`] = `
<div>
  <div
    class="fieldGroup"
  >
    <input
      autocomplete="off"
      class="default disabled"
      disabled=""
      inputmode="numeric"
      name="name"
      type="text"
      value="12,345.57"
    />
  </div>
</div>
`;

exports[`AmountField Component AmountField renders with values in readonly 1`] = `
<div>
  <div
    class="fieldGroup"
  >
    <span
      autocomplete="off"
      class="default readOnly"
      id="name"
      name="name"
    >
      12.34
    </span>
  </div>
</div>
`;

exports[`AmountField Component AmountField renders with values with fieldSize and inline 1`] = `
<div>
  <div
    class="fieldGroup size-6 inline"
  >
    <input
      autocomplete="off"
      class="default"
      inputmode="numeric"
      name="name"
      type="text"
      value="1.23"
    />
  </div>
</div>
`;
